--- a/_config.yml
+++ b/_config.yml
@@ -9,12 +9,10 @@
 title: Bayesian Statistics
 email: minsuk@stat.tamu.edu
 description: > # this means to ignore newlines until "baseurl:"
-  MjnefieifjeiflasmljalkdjWrite an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.wefijeifjajiewlf
-baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://yourdomain.com" # the base hostname & protocol for your site
+    
+url: "http://minsuk000.github.com" # the base hostname & protocol for your site
 github_username:  minsuk000
 
 # Build settings
 markdown: kramdown
+pygments: true
