--- a/_config.yml
+++ b/_config.yml
@@ -9,7 +9,7 @@
 title: Bayesian Statistics
 email: minsuk@stat.tamu.edu
 description: > # this means to ignore newlines until "baseurl:"
-    
+    efalejflwijef
 url: "http://minsuk000.github.com" # the base hostname & protocol for your site
 github_username:  minsuk000
 
