--- a/_config.yml
+++ b/_config.yml
@@ -6,12 +6,10 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Bayesian Statistics
+title: Bayesian Statistics and Model Selection
 email: minsuk@stat.tamu.edu 
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://minsuk000.github.io" # the base hostname & protocol for your site
 github_username:  minsuk
