--- a/_config.yml
+++ b/_config.yml
@@ -6,13 +6,14 @@
 # 'jekyll serve'. If you change this file, please restart the server process.
 
 # Site settings
-title: Bayesian Statistics and Model Selection
+title: Bayes Model Selection
 email: minsuk@stat.tamu.edu 
 description: > # this means to ignore newlines until "baseurl:"
   
+  
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://minsuk000.github.io" # the base hostname & protocol for your site
-github_username:  minsuk
+github_username:  minsuk000
 
 # Build settings
 markdown: kramdown
