--- a/_config.yml
+++ b/_config.yml
@@ -4,10 +4,10 @@
 permalink:           pretty
 comments: True
 # Setup
-title:               Lanyon
+title:               Bayesian Statistics
 tagline:             'A Jekyll theme'
 description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://lanyon.getpoole.com
+url:                 http://minsuk000.github.com
 baseurl:             ''
 paginate:            5
 
