--- a/_config.yml
+++ b/_config.yml
@@ -1,21 +1,28 @@
-# Permalinks
-#
-# Use of `relative_permalinks` ensures post links from the index work properly.
-permalink:           pretty
-comments: True
-# Setup
-title:               Bayesian Statistics
-tagline:             'A Jekyll theme'
-description:         'A reserved <a href="http://jekyllrb.com" target="_blank">Jekyll</a> theme that places the utmost gravity on content with a hidden drawer. Made by <a href="https://twitter.com/mdo" target="_blank">@mdo</a>.'
-url:                 http://minsuk000.github.com
-baseurl:             ''
-paginate:            5
+# Dependencies
+markdown:         redcarpet
+pygments:         true
 
-# About/contact
+# Permalinks
+permalink:        pretty
+
+# Setup
+title:            Joshua Lande
+tagline:          'The personal website of Joshua Lande'
+description:      'The personal website of Joshua Lande'
+url:              joshualande.com
+
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:           'Joshua Lande'
+  url:            https://twitter.com/mdo
+
+paginate:         1
 
 # Custom vars
-version:             1.0.0
+version:          1.0.0
+
+github:
+  repo:           github.com/joshualande/joshualande.github.io
+
+# This is the list of pages to incldue in the header of the website.
+pages_list:       {'About':'/about','Archive':'/archive','Feed':'/atom.xml'}
+
