--- a/_config.yml
+++ b/_config.yml
@@ -1,28 +1,32 @@
-# Dependencies
-markdown:         redcarpet
-pygments:         true
-
 # Permalinks
-permalink:        pretty
+permalink:           pretty
 
 # Setup
-title:            Joshua Lande
-tagline:          'The personal website of Joshua Lande'
-description:      'The personal website of Joshua Lande'
-url:              joshualande.com
+title:               Poole
+tagline:             The Jekyll Butler
+url:                 http://getpoole.com
+paginate:            1
+baseurl:             ""
 
+# Assets
+#
+# We specify the directory for Jekyll so we can use @imports.
+sass:
+  sass_dir:          _sass
+  style:            :compressed
+
+# About/contact
 author:
-  name:           'Joshua Lande'
-  url:            https://twitter.com/mdo
-
-paginate:         1
+  name:              Mark Otto
+  url:               https://twitter.com/mdo
+  email:             markdotto@gmail.com
 
 # Custom vars
-version:          1.0.0
-
+version:             2.0.0
 github:
-  repo:           github.com/joshualande/joshualande.github.io
+  repo:              https://github.com/poole/poole
 
-# This is the list of pages to incldue in the header of the website.
-pages_list:       {'About':'/about','Archive':'/archive','Feed':'/atom.xml'}
-
+# Gems
+gems:
+  - jekyll-paginate
+  - jekyll-gist
