--- a/_config.yml
+++ b/_config.yml
@@ -2,9 +2,9 @@
 permalink:           pretty
 
 # Setup
-title:               Poole
-tagline:             The Jekyll Butler
-url:                 http://getpoole.com
+title:               Bayesian Statistics
+tagline:             Minsuk Shin
+url:                 http://minsuk000.github.io
 paginate:            1
 baseurl:             ""
 
@@ -17,9 +17,15 @@ sass:
 
 # About/contact
 author:
-  name:              Mark Otto
-  url:               https://twitter.com/mdo
-  email:             markdotto@gmail.com
+  name:              Minsuk Shin
+  url:               https://stat.tamu.edu/~minsuk
+  email:             minsuk@stat.tamu.edu
+
+# page list
+pages_list:       
+  About: '/about'
+  Archive: '/archive'
+  Feed: '/atom.xml'
 
 # Custom vars
 version:             2.0.0
