--- a/_config.yml
+++ b/_config.yml
@@ -2,7 +2,7 @@
 permalink:           pretty
 
 # Setup
-title:               Bayesian Statistics
+title:               BayesHigh
 url:                 http://minsuk000.github.io
 paginate:            1
 baseurl:             ""
